addrspace/apps/anvil/nix-daemon.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anvil-nix-daemon
spec:
  template:
    spec:
      volumes:
        - name: nix
          persistentVolumeClaim:
            claimName: anvil-nix-shared
