addrspace/apps/anvil/profile-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anvil-profile
spec:
  strategy:
    type: Recreate
  template:
    spec:
